--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     }
 
     function mouseDownHandler(e) {
+        e.preventDefault();
         const loc = {x: e.x, y: e.y, width: 1, height: 1};
         for (let i = balloons.length - 1; i >= 0; i--) {
             if (isHit(loc, balloons[i])) {
