--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     // window.addEventListener("keydown", keyDownHandler, false);
     // window.addEventListener("keyup", keyUpHandler, false);
     window.addEventListener("mousemove", mouseMoveHandler, false);
+    window.addEventListener("touchstart", mouseDownHandler, false);
     window.addEventListener("mousedown", mouseDownHandler, false);
     window.addEventListener("resize", resizeHandler, false);
     window.addEventListener("fullscreenchange", resizeHandler, false);
@@ -139,7 +140,6 @@
     }
 
     function mouseDownHandler(e) {
-        e.preventDefault();
         const loc = {x: e.x, y: e.y, width: 1, height: 1};
         for (let i = balloons.length - 1; i >= 0; i--) {
             if (isHit(loc, balloons[i])) {
