--- a/index.html
+++ b/index.html
@@ -109,8 +109,6 @@
     // window.addEventListener("keydown", keyDownHandler, false);
     // window.addEventListener("keyup", keyUpHandler, false);
     window.addEventListener("mousemove", mouseMoveHandler, false);
-    window.addEventListener("touchstart", mouseDownHandler, false);
-    window.addEventListener("mousedown", mouseDownHandler, false);
     window.addEventListener("resize", resizeHandler, false);
     window.addEventListener("fullscreenchange", resizeHandler, false);
 
@@ -137,12 +135,9 @@
     function mouseMoveHandler(e) {
         mouse.x = e.clientX - canvas.offsetLeft;
         mouse.y = e.clientY - canvas.offsetTop;
-    }
 
-    function mouseDownHandler(e) {
-        const loc = {x: e.x, y: e.y, width: 1, height: 1};
         for (let i = balloons.length - 1; i >= 0; i--) {
-            if (isHit(loc, balloons[i])) {
+            if (isHit(mouse, balloons[i])) {
                 balloons[i].pop();
                 balloons.splice(i, 1);
                 return;
